Username validation and otp docs
